Add README and screenshots

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,9 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <p>
+      Hi and welcome to my first Express app! It is a disc golf app that allows you to keep track of your bags and discs. When I am playing I can never remember which discs I have in my bag and what their flight numbers are. This app will allow you to keep track of all of that information.
+    </p>
   </body>
 </html>
 
