Move add bag from nav bar

--- a/views/bags/index.ejs
+++ b/views/bags/index.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
 
 <body>
-  <h1><%= title %></h1>
+  <h1><%= title %></h1><span><a href="/bags/new">Add Bag</a></span>
   <% if (bags.length === 0) { %>
     <p>No bags</p>
   <% } else { %>
