--- a/views/discs/new.ejs
+++ b/views/discs/new.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
 <body>
   <% if (locals.message) { %>
-    <div class="alert">
+    <div class="git add .">
       <%= locals.message %>
     </div>
   <% } %>
