--- a/views/bags/index.ejs
+++ b/views/bags/index.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
 
 <body>
-  <h1><%= title %></h1><span><a href="/bags/new">Add Bag</a></span>
+  <h1><%= title %></h1><span><a href="/bags/new"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" id="plus"><path fill="#000" fill-rule="evenodd" d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10ZM11 8a1 1 0 1 1 2 0v3h3a1 1 0 1 1 0 2h-3v3a1 1 0 1 1-2 0v-3H8a1 1 0 1 1 0-2h3V8Z" clip-rule="evenodd"></path></svg></a></span>
   <% if (bags.length === 0) { %>
     <p>No bags</p>
   <% } else { %>
