--- a/views/bags/index.ejs
+++ b/views/bags/index.ejs
@@ -5,7 +5,7 @@
   <% if (bags.length === 0) { %>
     <p>No bags</p>
   <% } else { %>
-    <table>
+    <table class="bag-list">
       <thead>
         <tr>
           <th>Name</th>
