--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="NcU1h3s3oEWnIeImF0q0Fx0SaL4XJRGByl1bbKYS_Ck" />
     <title>Disc Tracker</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
